Refs #12912 Added IE6 hack to prevent collapsing list items.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@25045 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/android/ListItem-compat.css
+++ b/mobile/themes/android/ListItem-compat.css
@@ -21,3 +21,6 @@
 *html .mblListItemTextBox { /* IE6 hack */
 	height: 100%;
 }
+*html li.mblListItem.mblVariableHeight .mblListItemTextBox { /* IE6 hack */
+	height: auto;
+}
