--- a/mobile/themes/custom/ListItem-compat.css
+++ b/mobile/themes/custom/ListItem-compat.css
@@ -11,3 +11,6 @@
 *html .mblListItemTextBox { /* IE6 hack */
 	height: 100%;
 }
+*html li.mblListItem.mblVariableHeight .mblListItemTextBox { /* IE6 hack */
+	height: auto;
+}
